feat: working on bug not display "Loading..."
