# docs/swagger.json
@@ -427,6 +427,15 @@
         },
         "entity.Todo": {
             "type": "object",
+            "required": [
+                "completed",
+                "created_at",
+                "description",
+                "id",
+                "priority",
+                "title",
+                "updated_at"
+            ],
             "properties": {
                 "completed": {
                     "type": "boolean"
@@ -456,6 +465,12 @@
         },
         "entity.Todos": {
             "type": "object",
+            "required": [
+                "data",
+                "limit",
+                "page",
+                "total"
+            ],
             "properties": {
                 "data": {
                     "type": "array",
@@ -636,6 +651,9 @@
         },
         "response.Auth": {
             "type": "object",
+            "required": [
+                "token"
+            ],
             "properties": {
                 "token": {
                     "type": "string"
@@ -644,6 +662,9 @@
         },
         "response.Message": {
             "type": "object",
+            "required": [
+                "message"
+            ],
             "properties": {
                 "message": {
                     "type": "string"
