# internal/entity/todo.go
@@ -11,21 +11,21 @@ const (
 )
 
 type Todo struct {
-	ID          int32          `json:"id"`
+	ID          int32          `json:"id"          validate:"required"`
 	UserID      int32          `json:"-"`
-	Title       string         `json:"title"`
-	Description string         `json:"description"`
-	Completed   bool           `json:"completed"`
-	Priority    *PriorityLevel `json:"priority"`
+	Title       string         `json:"title"       validate:"required"`
+	Description string         `json:"description" validate:"required"`
+	Completed   bool           `json:"completed"   validate:"required"`
+	Priority    *PriorityLevel `json:"priority"    validate:"required"`
 	DueDate     *time.Time     `json:"due_date"`
-	CreatedAt   time.Time      `json:"created_at"`
-	UpdatedAt   time.Time      `json:"updated_at"`
+	CreatedAt   time.Time      `json:"created_at"  validate:"required"`
+	UpdatedAt   time.Time      `json:"updated_at"  validate:"required"`
 	DeletedAt   *time.Time     `json:"-"`
 }
 
 type Todos struct {
-	Data  []Todo `json:"data"`
-	Page  int32  `json:"page"`
-	Limit int32  `json:"limit"`
-	Total int32  `json:"total"`
+	Data  []Todo `json:"data"  validate:"required"`
+	Page  int32  `json:"page"  validate:"required"`
+	Limit int32  `json:"limit" validate:"required"`
+	Total int32  `json:"total" validate:"required"`
 }
